kubernetes/ingress/example-app.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-app
  labels:
    app: my-app
spec:
  containers:
  - name: web
    image: web
    imagePullPolicy: Never
    ports:
    - containerPort: 1234
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: my-app
  name: my-app
spec:
  ports:
  - port: 1234
    protocol: TCP
  selector:
    app: my-app
  type: NodePort
